fix footer, horizontal scrollbar, team thumbnail, ol styles

--- a/sass/base/elements/_lists.scss
+++ b/sass/base/elements/_lists.scss
@@ -7,7 +7,7 @@ ul {
 	list-style: disc;
 }
 
-ol {
+ol.big-numbers {
 	list-style: none;
 	counter-reset: freefrom-counter;
 
