--- a/sass/components/gutenberg/_colors.scss
+++ b/sass/components/gutenberg/_colors.scss
@@ -15,10 +15,10 @@ $colors: ( black, $color__black ),
 @each $name, $color in $colors {
 
 	.has-#{$name}-color {
-		color: $color;
+		color: $color !important;
 	}
 
 	.has-#{$name}-background-color {
-		background-color: $color;
+		background-color: $color !important;
 	}
 }
